--- a/css/custom.css
+++ b/css/custom.css
@@ -8,3 +8,12 @@
     height: 100px;
 }
 
+.onderdeelimg {
+    width: 240px;
+    height: 180px;
+}
+
+.mediaimg {
+    width: 120px;
+    height: 96px;
+}
