--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2256,7 +2256,7 @@ textarea.input-lg {
   font-size: 14px;
   font-weight: normal;
   line-height: 1.428571429;
-  text-align: center;
+  text-align: left;
   white-space: nowrap;
   vertical-align: middle;
   cursor: pointer;
