--- a/css/custom.css
+++ b/css/custom.css
@@ -1,19 +1,42 @@
-.onderdelenthumb {
+.onderdelenimg {
     width: 180px;
     height: 120px;
 }
 
-.gebouwthumb {
-    width: 180px;
-    height: 100px;
+.footerimg {
+    width: 160px;
+    height: 90px;
 }
 
 .onderdeelimg {
     width: 240px;
-    height: 180px;
+    height: 120px;
 }
 
 .mediaimg {
     width: 120px;
     height: 96px;
+}
+
+.margintop {
+    margin-top: 85px;
+}
+
+.thumbnail {
+    position:relative;
+    overflow:hidden;
+}
+ 
+.onderdeelcaption {
+    position:absolute;
+    top:0;
+    right:0;
+    background:rgba(0,0,0,0.4);
+    width:100%;
+    height:100%;
+    padding:2%;
+    display: none;
+    text-align:center;
+    color:#fff !important;
+    z-index:2;
 }
