--- a/css/custom.css
+++ b/css/custom.css
@@ -18,10 +18,6 @@
     height: 96px;
 }
 
-.margintop {
-    margin-top: 85px;
-}
-
 .thumbnail {
     position:relative;
     overflow:hidden;
@@ -40,3 +36,14 @@
     color:#fff !important;
     z-index:2;
 }
+
+.loginerror {
+    color: red;
+    font-style: italic;
+}
+
+.passworderror {
+    color: red;
+    font-style: italic;
+}
+
