--- a/css/custom.css
+++ b/css/custom.css
@@ -4,8 +4,14 @@
 }
 
 .footerimg {
-    width: 160px;
-    height: 90px;
+    width: 180px;
+    height: 151px;
+}
+
+.socialbutton {
+    width: 50px;
+    height: 50px;
+
 }
 
 .onderdeelimg {
@@ -13,9 +19,16 @@
     height: 120px;
 }
 
-.mediaimg {
+.mediaimgmobile {
     width: 120px;
     height: 96px;
+}
+
+.mediaimgdesktop {
+    width: 250px;
+    height: 129px;
+    padding-right: 25px;
+    padding-left: 25px; 
 }
 
 .thumbnail {
@@ -37,6 +50,11 @@
     z-index:;
 }
 
+.emailerror {
+    color: red;
+    font-style: italic;
+}
+
 .loginerror {
     color: red;
     font-style: italic;
@@ -47,7 +65,66 @@
     font-style: italic;
 }
 
+.opgeslagen {
+    color: green;
+  }
+
+.opgeslagenpassword {
+    color: green;
+  }
+
+.naamerror {
+    color: red;
+    font-style: italic;
+}
+
+.emailerror {
+    color: red;
+    font-style: italic;
+}
 .popoverthumb {
     width: 40px;
     height: 40px;
+}
+
+.modal-wide .modal-dialog {
+  width: 50%; 
+}
+
+.bg-blue {
+    background-color: #0E548E;
+    color: #ffffff;
+    box-shadow: 5px 10px 3px #888888;
+  }
+
+.uitlijnen {
+  padding-right: 25px;
+  padding-left: 25px;
+ }
+
+.wordtlidbtn {
+  padding-right: 25px;
+  padding-left: 25px;
+ }
+
+.lastnews {
+  color: #5192C8;
+  font-size: 24px;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+ }
+
+.logo {
+  width: 100px;
+  height: 50px;  
+    
+}
+
+.info {
+ 
+ }
+
+.published {
+    font-size: 12px;
+    font-style: italic;
+    color: #b8b8b8;
 }
